NewFlowChartTool/FlowChart.Parser/g4/.antlr/NodeParserParser.java
// Generated from f:\asyncflow\NewFlowChartTool\NewFlowChartTool\FlowChart.Parser\g4\NodeParser.g4 by ANTLR 4.9.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class NodeParserParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, TRUE=24, FALSE=25, 
		NIL=26, SELF=27, ASSIGN=28, GT=29, LT=30, BANG=31, TILDE=32, QUESTION=33, 
		COLON=34, EQUAL=35, LE=36, GE=37, NOTEQUAL=38, AND=39, OR=40, ADD=41, 
		SUB=42, MUL=43, DIV=44, NAME=45, VARIABLE=46, STRING=47, NUMBER=48, DEC_INTEGER=49, 
		HEX_INTEGER=50, FLOAT_NUMBER=51;
	public static final int
		RULE_stat = 0, RULE_expr = 1, RULE_atom_expr = 2, RULE_container_expr = 3, 
		RULE_assign_stat = 4, RULE_argument = 5, RULE_argumentlist = 6, RULE_operatorUnary = 7, 
		RULE_operatorMulDivMod = 8, RULE_operatorAddSub = 9, RULE_operatorStrcat = 10, 
		RULE_operatorBitwise = 11, RULE_operatorComparison = 12, RULE_operatorAnd = 13, 
		RULE_operatorOr = 14;
	private static String[] makeRuleNames() {
		return new String[] {
			"stat", "expr", "atom_expr", "container_expr", "assign_stat", "argument", 
			"argumentlist", "operatorUnary", "operatorMulDivMod", "operatorAddSub", 
			"operatorStrcat", "operatorBitwise", "operatorComparison", "operatorAnd", 
			"operatorOr"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'('", "')'", "'.'", "'['", "']'", "'{'", "'}'", "','", "'not'", 
			"'#'", "'^'", "'%'", "'..'", "'&'", "'|'", "'<<'", "'>>'", "'~='", "'!='", 
			"'and'", "'&&'", "'or'", "'||'", "'true'", "'false'", "'nil'", "'self'", 
			"'='", "'>'", "'<'", "'!'", "'~'", "'?'", "':'", "'=='", "'<='", "'>='", 
			null, null, null, "'+'", "'-'", "'*'", "'/'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			"TRUE", "FALSE", "NIL", "SELF", "ASSIGN", "GT", "LT", "BANG", "TILDE", 
			"QUESTION", "COLON", "EQUAL", "LE", "GE", "NOTEQUAL", "AND", "OR", "ADD", 
			"SUB", "MUL", "DIV", "NAME", "VARIABLE", "STRING", "NUMBER", "DEC_INTEGER", 
			"HEX_INTEGER", "FLOAT_NUMBER"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "NodeParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public NodeParserParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class StatContext extends ParserRuleContext {
		public StatContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stat; }
	 
		public StatContext() { }
		public void copyFrom(StatContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class Stat_assignContext extends StatContext {
		public Assign_statContext assign_stat() {
			return getRuleContext(Assign_statContext.class,0);
		}
		public Stat_assignContext(StatContext ctx) { copyFrom(ctx); }
	}
	public static class Stat_exprContext extends StatContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public Stat_exprContext(StatContext ctx) { copyFrom(ctx); }
	}

	public final StatContext stat() throws RecognitionException {
		StatContext _localctx = new StatContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_stat);
		try {
			setState(32);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				_localctx = new Stat_assignContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(30);
				assign_stat();
				}
				break;
			case 2:
				_localctx = new Stat_exprContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(31);
				expr(0);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExprContext extends ParserRuleContext {
		public ExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr; }
	 
		public ExprContext() { }
		public void copyFrom(ExprContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class Expr_compareContext extends ExprContext {
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public OperatorComparisonContext operatorComparison() {
			return getRuleContext(OperatorComparisonContext.class,0);
		}
		public Expr_compareContext(ExprContext ctx) { copyFrom(ctx); }
	}
	public static class Expr_parenthesisContext extends ExprContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public Expr_parenthesisContext(ExprContext ctx) { copyFrom(ctx); }
	}
	public static class Expr_containerContext extends ExprContext {
		public Container_exprContext container_expr() {
			return getRuleContext(Container_exprContext.class,0);
		}
		public Expr_containerContext(ExprContext ctx) { copyFrom(ctx); }
	}
	public static class Expr_atomContext extends ExprContext {
		public Atom_exprContext atom_expr() {
			return getRuleContext(Atom_exprContext.class,0);
		}
		public Expr_atomContext(ExprContext ctx) { copyFrom(ctx); }
	}
	public static class Expr_strcatContext extends ExprContext {
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public OperatorStrcatContext operatorStrcat() {
			return getRuleContext(OperatorStrcatContext.class,0);
		}
		public Expr_strcatContext(ExprContext ctx) { copyFrom(ctx); }
	}
	public static class Expr_func_with_callerContext extends ExprContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode NAME() { return getToken(NodeParserParser.NAME, 0); }
		public ArgumentlistContext argumentlist() {
			return getRuleContext(ArgumentlistContext.class,0);
		}
		public Expr_func_with_callerContext(ExprContext ctx) { copyFrom(ctx); }
	}
	public static class Expr_mul_divContext extends ExprContext {
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public OperatorMulDivModContext operatorMulDivMod() {
			return getRuleContext(OperatorMulDivModContext.class,0);
		}
		public Expr_mul_divContext(ExprContext ctx) { copyFrom(ctx); }
	}
	public static class Expr_subscriptContext extends ExprContext {
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public Expr_subscriptContext(ExprContext ctx) { copyFrom(ctx); }
	}
	public static class Expr_memberContext extends ExprContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode NAME() { return getToken(NodeParserParser.NAME, 0); }
		public Expr_memberContext(ExprContext ctx) { copyFrom(ctx); }
	}
	public static class Expr_orContext extends ExprContext {
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public OperatorOrContext operatorOr() {
			return getRuleContext(OperatorOrContext.class,0);
		}
		public Expr_orContext(ExprContext ctx) { copyFrom(ctx); }
	}
	public static class Expr_andContext extends ExprContext {
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public OperatorAndContext operatorAnd() {
			return getRuleContext(OperatorAndContext.class,0);
		}
		public Expr_andContext(ExprContext ctx) { copyFrom(ctx); }
	}
	public static class Expr_bitwiseContext extends ExprContext {
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public OperatorBitwiseContext operatorBitwise() {
			return getRuleContext(OperatorBitwiseContext.class,0);
		}
		public Expr_bitwiseContext(ExprContext ctx) { copyFrom(ctx); }
	}
	public static class Expr_add_subContext extends ExprContext {
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public OperatorAddSubContext operatorAddSub() {
			return getRuleContext(OperatorAddSubContext.class,0);
		}
		public Expr_add_subContext(ExprContext ctx) { copyFrom(ctx); }
	}
	public static class Expr_unaryContext extends ExprContext {
		public OperatorUnaryContext operatorUnary() {
			return getRuleContext(OperatorUnaryContext.class,0);
		}
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public Expr_unaryContext(ExprContext ctx) { copyFrom(ctx); }
	}
	public static class Expr_func_no_callerContext extends ExprContext {
		public TerminalNode NAME() { return getToken(NodeParserParser.NAME, 0); }
		public ArgumentlistContext argumentlist() {
			return getRuleContext(ArgumentlistContext.class,0);
		}
		public Expr_func_no_callerContext(ExprContext ctx) { copyFrom(ctx); }
	}

	public final ExprContext expr() throws RecognitionException {
		return expr(0);
	}

	private ExprContext expr(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		ExprContext _localctx = new ExprContext(_ctx, _parentState);
		ExprContext _prevctx = _localctx;
		int _startState = 2;
		enterRecursionRule(_localctx, 2, RULE_expr, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(49);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case TRUE:
			case FALSE:
			case NIL:
			case SELF:
			case VARIABLE:
			case STRING:
			case NUMBER:
				{
				_localctx = new Expr_atomContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;

				setState(35);
				atom_expr();
				}
				break;
			case T__3:
			case T__5:
				{
				_localctx = new Expr_containerContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(36);
				container_expr();
				}
				break;
			case T__0:
				{
				_localctx = new Expr_parenthesisContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(37);
				match(T__0);
				setState(38);
				expr(0);
				setState(39);
				match(T__1);
				}
				break;
			case NAME:
				{
				_localctx = new Expr_func_no_callerContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(41);
				match(NAME);
				setState(42);
				match(T__0);
				setState(43);
				argumentlist();
				setState(44);
				match(T__1);
				}
				break;
			case T__8:
			case T__9:
			case TILDE:
			case SUB:
				{
				_localctx = new Expr_unaryContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(46);
				operatorUnary();
				setState(47);
				expr(8);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			_ctx.stop = _input.LT(-1);
			setState(96);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(94);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
					case 1:
						{
						_localctx = new Expr_mul_divContext(new ExprContext(_parentctx, _parentState));
						pushNewRecursionContext(_localctx, _startState, RULE_expr);
						setState(51);
						if (!(precpred(_ctx, 7))) throw new FailedPredicateException(this, "precpred(_ctx, 7)");
						setState(52);
						operatorMulDivMod();
						setState(53);
						expr(8);
						}
						break;
					case 2:
						{
						_localctx = new Expr_add_subContext(new ExprContext(_parentctx, _parentState));
						pushNewRecursionContext(_localctx, _startState, RULE_expr);
						setState(55);
						if (!(precpred(_ctx, 6))) throw new FailedPredicateException(this, "precpred(_ctx, 6)");
						setState(56);
						operatorAddSub();
						setState(57);
						expr(7);
						}
						break;
					case 3:
						{
						_localctx = new Expr_compareContext(new ExprContext(_parentctx, _parentState));
						pushNewRecursionContext(_localctx, _startState, RULE_expr);
						setState(59);
						if (!(precpred(_ctx, 5))) throw new FailedPredicateException(this, "precpred(_ctx, 5)");
						setState(60);
						operatorComparison();
						setState(61);
						expr(6);
						}
						break;
					case 4:
						{
						_localctx = new Expr_strcatContext(new ExprContext(_parentctx, _parentState));
						pushNewRecursionContext(_localctx, _startState, RULE_expr);
						setState(63);
						if (!(precpred(_ctx, 4))) throw new FailedPredicateException(this, "precpred(_ctx, 4)");
						setState(64);
						operatorStrcat();
						setState(65);
						expr(5);
						}
						break;
					case 5:
						{
						_localctx = new Expr_andContext(new ExprContext(_parentctx, _parentState));
						pushNewRecursionContext(_localctx, _startState, RULE_expr);
						setState(67);
						if (!(precpred(_ctx, 3))) throw new FailedPredicateException(this, "precpred(_ctx, 3)");
						setState(68);
						operatorAnd();
						setState(69);
						expr(4);
						}
						break;
					case 6:
						{
						_localctx = new Expr_orContext(new ExprContext(_parentctx, _parentState));
						pushNewRecursionContext(_localctx, _startState, RULE_expr);
						setState(71);
						if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
						setState(72);
						operatorOr();
						setState(73);
						expr(3);
						}
						break;
					case 7:
						{
						_localctx = new Expr_bitwiseContext(new ExprContext(_parentctx, _parentState));
						pushNewRecursionContext(_localctx, _startState, RULE_expr);
						setState(75);
						if (!(precpred(_ctx, 1))) throw new FailedPredicateException(this, "precpred(_ctx, 1)");
						setState(76);
						operatorBitwise();
						setState(77);
						expr(2);
						}
						break;
					case 8:
						{
						_localctx = new Expr_memberContext(new ExprContext(_parentctx, _parentState));
						pushNewRecursionContext(_localctx, _startState, RULE_expr);
						setState(79);
						if (!(precpred(_ctx, 12))) throw new FailedPredicateException(this, "precpred(_ctx, 12)");
						setState(80);
						match(T__2);
						setState(81);
						match(NAME);
						}
						break;
					case 9:
						{
						_localctx = new Expr_subscriptContext(new ExprContext(_parentctx, _parentState));
						pushNewRecursionContext(_localctx, _startState, RULE_expr);
						setState(82);
						if (!(precpred(_ctx, 11))) throw new FailedPredicateException(this, "precpred(_ctx, 11)");
						setState(83);
						match(T__3);
						setState(84);
						expr(0);
						setState(85);
						match(T__4);
						}
						break;
					case 10:
						{
						_localctx = new Expr_func_with_callerContext(new ExprContext(_parentctx, _parentState));
						pushNewRecursionContext(_localctx, _startState, RULE_expr);
						setState(87);
						if (!(precpred(_ctx, 9))) throw new FailedPredicateException(this, "precpred(_ctx, 9)");
						setState(88);
						match(T__2);
						setState(89);
						match(NAME);
						setState(90);
						match(T__0);
						setState(91);
						argumentlist();
						setState(92);
						match(T__1);
						}
						break;
					}
					} 
				}
				setState(98);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class Atom_exprContext extends ParserRuleContext {
		public Atom_exprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_atom_expr; }
	 
		public Atom_exprContext() { }
		public void copyFrom(Atom_exprContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class Atom_selfContext extends Atom_exprContext {
		public TerminalNode SELF() { return getToken(NodeParserParser.SELF, 0); }
		public Atom_selfContext(Atom_exprContext ctx) { copyFrom(ctx); }
	}
	public static class Atom_falseContext extends Atom_exprContext {
		public TerminalNode FALSE() { return getToken(NodeParserParser.FALSE, 0); }
		public Atom_falseContext(Atom_exprContext ctx) { copyFrom(ctx); }
	}
	public static class Atom_numberContext extends Atom_exprContext {
		public TerminalNode NUMBER() { return getToken(NodeParserParser.NUMBER, 0); }
		public Atom_numberContext(Atom_exprContext ctx) { copyFrom(ctx); }
	}
	public static class Atom_variableContext extends Atom_exprContext {
		public TerminalNode VARIABLE() { return getToken(NodeParserParser.VARIABLE, 0); }
		public Atom_variableContext(Atom_exprContext ctx) { copyFrom(ctx); }
	}
	public static class Atom_trueContext extends Atom_exprContext {
		public TerminalNode TRUE() { return getToken(NodeParserParser.TRUE, 0); }
		public Atom_trueContext(Atom_exprContext ctx) { copyFrom(ctx); }
	}
	public static class Atom_nilContext extends Atom_exprContext {
		public TerminalNode NIL() { return getToken(NodeParserParser.NIL, 0); }
		public Atom_nilContext(Atom_exprContext ctx) { copyFrom(ctx); }
	}
	public static class Atom_stringContext extends Atom_exprContext {
		public TerminalNode STRING() { return getToken(NodeParserParser.STRING, 0); }
		public Atom_stringContext(Atom_exprContext ctx) { copyFrom(ctx); }
	}

	public final Atom_exprContext atom_expr() throws RecognitionException {
		Atom_exprContext _localctx = new Atom_exprContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_atom_expr);
		try {
			setState(106);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case NUMBER:
				_localctx = new Atom_numberContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(99);
				match(NUMBER);
				}
				break;
			case STRING:
				_localctx = new Atom_stringContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(100);
				match(STRING);
				}
				break;
			case VARIABLE:
				_localctx = new Atom_variableContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(101);
				match(VARIABLE);
				}
				break;
			case TRUE:
				_localctx = new Atom_trueContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(102);
				match(TRUE);
				}
				break;
			case FALSE:
				_localctx = new Atom_falseContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(103);
				match(FALSE);
				}
				break;
			case NIL:
				_localctx = new Atom_nilContext(_localctx);
				enterOuterAlt(_localctx, 6);
				{
				setState(104);
				match(NIL);
				}
				break;
			case SELF:
				_localctx = new Atom_selfContext(_localctx);
				enterOuterAlt(_localctx, 7);
				{
				setState(105);
				match(SELF);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Container_exprContext extends ParserRuleContext {
		public ArgumentlistContext argumentlist() {
			return getRuleContext(ArgumentlistContext.class,0);
		}
		public Container_exprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_container_expr; }
	}

	public final Container_exprContext container_expr() throws RecognitionException {
		Container_exprContext _localctx = new Container_exprContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_container_expr);
		try {
			setState(116);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__3:
				enterOuterAlt(_localctx, 1);
				{
				setState(108);
				match(T__3);
				setState(109);
				argumentlist();
				setState(110);
				match(T__4);
				}
				break;
			case T__5:
				enterOuterAlt(_localctx, 2);
				{
				setState(112);
				match(T__5);
				setState(113);
				argumentlist();
				setState(114);
				match(T__6);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Assign_statContext extends ParserRuleContext {
		public Assign_statContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assign_stat; }
	 
		public Assign_statContext() { }
		public void copyFrom(Assign_statContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class Expr_var_assignContext extends Assign_statContext {
		public TerminalNode VARIABLE() { return getToken(NodeParserParser.VARIABLE, 0); }
		public TerminalNode ASSIGN() { return getToken(NodeParserParser.ASSIGN, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public Expr_var_assignContext(Assign_statContext ctx) { copyFrom(ctx); }
	}
	public static class Expr_subscript_assignContext extends Assign_statContext {
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public TerminalNode ASSIGN() { return getToken(NodeParserParser.ASSIGN, 0); }
		public Expr_subscript_assignContext(Assign_statContext ctx) { copyFrom(ctx); }
	}
	public static class Expr_member_assignContext extends Assign_statContext {
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public TerminalNode NAME() { return getToken(NodeParserParser.NAME, 0); }
		public TerminalNode ASSIGN() { return getToken(NodeParserParser.ASSIGN, 0); }
		public Expr_member_assignContext(Assign_statContext ctx) { copyFrom(ctx); }
	}

	public final Assign_statContext assign_stat() throws RecognitionException {
		Assign_statContext _localctx = new Assign_statContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_assign_stat);
		try {
			setState(134);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				_localctx = new Expr_var_assignContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(118);
				match(VARIABLE);
				setState(119);
				match(ASSIGN);
				setState(120);
				expr(0);
				}
				break;
			case 2:
				_localctx = new Expr_member_assignContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(121);
				expr(0);
				setState(122);
				match(T__2);
				setState(123);
				match(NAME);
				setState(124);
				match(ASSIGN);
				setState(125);
				expr(0);
				}
				break;
			case 3:
				_localctx = new Expr_subscript_assignContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(127);
				expr(0);
				setState(128);
				match(T__3);
				setState(129);
				expr(0);
				setState(130);
				match(T__4);
				setState(131);
				match(ASSIGN);
				setState(132);
				expr(0);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArgumentContext extends ParserRuleContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode NAME() { return getToken(NodeParserParser.NAME, 0); }
		public TerminalNode ASSIGN() { return getToken(NodeParserParser.ASSIGN, 0); }
		public ArgumentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_argument; }
	}

	public final ArgumentContext argument() throws RecognitionException {
		ArgumentContext _localctx = new ArgumentContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_argument);
		try {
			setState(140);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(136);
				expr(0);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(137);
				match(NAME);
				setState(138);
				match(ASSIGN);
				setState(139);
				expr(0);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArgumentlistContext extends ParserRuleContext {
		public List<ArgumentContext> argument() {
			return getRuleContexts(ArgumentContext.class);
		}
		public ArgumentContext argument(int i) {
			return getRuleContext(ArgumentContext.class,i);
		}
		public ArgumentlistContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_argumentlist; }
	}

	public final ArgumentlistContext argumentlist() throws RecognitionException {
		ArgumentlistContext _localctx = new ArgumentlistContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_argumentlist);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(143);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__3) | (1L << T__5) | (1L << T__8) | (1L << T__9) | (1L << TRUE) | (1L << FALSE) | (1L << NIL) | (1L << SELF) | (1L << TILDE) | (1L << SUB) | (1L << NAME) | (1L << VARIABLE) | (1L << STRING) | (1L << NUMBER))) != 0)) {
				{
				setState(142);
				argument();
				}
			}

			setState(149);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__7) {
				{
				{
				setState(145);
				match(T__7);
				setState(146);
				argument();
				}
				}
				setState(151);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OperatorUnaryContext extends ParserRuleContext {
		public TerminalNode SUB() { return getToken(NodeParserParser.SUB, 0); }
		public TerminalNode TILDE() { return getToken(NodeParserParser.TILDE, 0); }
		public OperatorUnaryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_operatorUnary; }
	}
